# MyGLRenderEngine

./: .gitignore  .gitmodules  .gitmodules.txt  CMakeLists.txt  OpenGl.sln
Data/: Information.txt
Models/: Base.mtl  Earth.mtl  OnlyBase.mtl  SpotLight.mtl
Models/Base/: sciencevessel_emissive.dds
OpenGl/: Application.cpp  Application.h  Callbacks.cpp  Callbacks.h  Default.frag  Default.vs  Headers.h  Light.cpp  Light.h  Loader.cpp  Loader.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Node.cpp  Node.h  Object.h  OpenGl.vcxproj  OpenGl.vcxproj.filters  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Transformation.h  camera.h  main.cpp  Сamera.h
RenderEngine/Headers/: Application.h  Camera.h  CommonHeaders.h  Entity.h  FrameBuffer.h  GUI.h  Light.h  Logger.h  Material.h  MemoryManager.h  Mesh.h  Model.h  Node.h  ParallelStructures.h  PostProcessEffects.h  Scene.h  Shader.h  Shadow.h  Time.h  Transformation.h  Window.h
RenderEngine/Headers/Loaders/: DBController.h  FilesTools.h  ImageLoader.h  ResourceManager.h  SceneLoader.h
RenderEngine/Headers/OGLSpec/: OGLMesh.h  OGLRenderer.h  OGLSpec.h
RenderEngine/Src/: Application.cpp  Entity.cpp  FrameBuffer.cpp  GUI.cpp  Light.cpp  Logger.cpp  Material.cpp  MemoryManager.cpp  Mesh.cpp  Model.cpp  Node.cpp  ParallelStructures.cpp  PostProcessEffects.cpp  Scene.cpp  Shader.cpp  Shadow.cpp  Time.cpp  Transformation.cpp  Window.cpp  main.cpp
RenderEngine/Src/Loaders/: DBController.cpp  FilesTools.cpp  ImageLoader.cpp  ResourceManager.cpp  SceneLoader.cpp
RenderEngine/Src/OGLSpec/: OGLMesh.cpp  OGLRenderer.cpp  OGLSpec.cpp
Shaders/: Base.frag  Base.vert  Base.vs  DepthMap.frag  DepthMap.gs  DepthMap.vs  DirectDepthMap.frag  DirectDepthMap.gs  DirectDepthMap.vs  GroundSh.frag  GroundSh.vert  GroundSh.vs  Light.frag  Light.vert  Light.vs  PointDepthMap.vs  PostEffects.frag  PostEffects.vert  PostEffects.vs  SkyBox.frag  SkyBox.vert
dependencies/: CMakeLists.txt
dependencies/gl/: CMakeLists.txt  gl.c
dependencies/sqlite/: CMakeLists.txt  fileio.c  test_windirent.c
src/: Application.cpp  Application.h  Camera.h  Entity.cpp  FrameBuffer.cpp  FrameBuffer.h  GUI.cpp  GUI.h  Headers.h  Light.cpp  Light.h  Loader.cpp  Loader.h  MemoryManager.cpp  MemoryManager.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Node.cpp  Node.h  ParallelStructures.cpp  ParallelStructures.h  STB_Loader.cpp  STB_Loader.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Shadow.cpp  Shadow.h  Time.cpp  Transformation.cpp  Transformation.h  Window.cpp  Window.h  imfilebrowser.h  main.cpp
